--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "Dockerfile": "dockerfile",
         "libgo_cool.h": "c",
-        "python.h": "c"
+        "python.h": "c",
+        "libcustom_fn.h": "c"
     }
 }
