--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "msgpack>=1.1.0",
     "pydantic>=2.10.6",
     "pyyaml>=6.0.2",
+    "rich>=13.9.4",
 ]
 
 [dependency-groups]
